dump/src/reader/v2/snapshots/dump__reader__v2__test__read_dump_v2-2.snap
---
source: dump/src/reader/v2/mod.rs
expression: tasks
---
[
  {
    "uuid": "5867e9f1-1ebb-4145-b0ec-b61b29da43e9",
    "update": {
      "status": "enqueued",
      "updateId": 0,
      "meta": {
        "type": "DocumentsAddition",
        "method": "ReplaceDocuments",
        "format": "Json",
        "primary_key": null
      },
      "enqueuedAt": "2022-10-09T20:27:59.828915609Z",
      "content": "1d0832b1-02f7-4c56-849e-d150d266ab46"
    }
  },
  {
    "uuid": "5661371a-21ab-4363-b2e5-5ca66126e5e0",
    "update": {
      "status": "processed",
      "success": "Other",
      "processedAt": "2022-10-09T20:27:22.688964637Z",
      "updateId": 0,
      "meta": {
        "type": "Settings",
        "synonyms": {
          "android": [
            "phone",
            "smartphone"
          ],
          "iphone": [
            "phone",
            "smartphone"
          ],
          "phone": [
            "smartphone",
            "iphone",
            "android"
          ]
        }
      },
      "enqueuedAt": "2022-10-09T20:27:22.597296237Z",
      "content": null,
      "startedProcessingAt": "2022-10-09T20:27:22.610066114Z"
    }
  },
  {
    "uuid": "5661371a-21ab-4363-b2e5-5ca66126e5e0",
    "update": {
      "status": "failed",
      "updateId": 1,
      "meta": {
        "type": "DocumentsAddition",
        "method": "ReplaceDocuments",
        "format": "Json",
        "primary_key": null
      },
      "enqueuedAt": "2022-10-09T20:27:23.305963122Z",
      "content": null,
      "startedProcessingAt": "2022-10-09T20:27:23.312497053Z",
      "error": {
        "message": "missing primary key",
        "errorCode": "missing_primary_key",
        "errorType": "invalid_request_error",
        "errorLink": "https://docs.meilisearch.com/errors#missing_primary_key"
      },
      "failedAt": "2022-10-09T20:27:23.31297828Z"
    }
  },
  {
    "uuid": "5661371a-21ab-4363-b2e5-5ca66126e5e0",
    "update": {
      "status": "processed",
      "success": {
        "DocumentsAddition": {
          "nb_documents": 10
        }
      },
      "processedAt": "2022-10-09T20:27:23.951017769Z",
      "updateId": 2,
      "meta": {
        "type": "DocumentsAddition",
        "method": "ReplaceDocuments",
        "format": "Json",
        "primary_key": "sku"
      },
      "enqueuedAt": "2022-10-09T20:27:23.91528854Z",
      "content": null,
      "startedProcessingAt": "2022-10-09T20:27:23.921493715Z"
    }
  },
  {
    "uuid": "bb33e237-be17-453c-83a2-4fef67d03220",
    "update": {
      "status": "processed",
      "success": {
        "DocumentsAddition": {
          "nb_documents": 10
        }
      },
      "processedAt": "2022-10-09T20:27:22.197788495Z",
      "updateId": 0,
      "meta": {
        "type": "DocumentsAddition",
        "method": "ReplaceDocuments",
        "format": "Json",
        "primary_key": null
      },
      "enqueuedAt": "2022-10-09T20:27:22.075264451Z",
      "content": null,
      "startedProcessingAt": "2022-10-09T20:27:22.085751162Z"
    }
  },
  {
    "uuid": "bb33e237-be17-453c-83a2-4fef67d03220",
    "update": {
      "status": "processed",
      "success": "Other",
      "processedAt": "2022-10-09T20:27:22.411761344Z",
      "updateId": 1,
      "meta": {
        "type": "Settings",
        "rankingRules": [
          "words",
          "typo",
          "proximity",
          "attribute",
          "exactness",
          "asc(release_date)"
        ]
      },
      "enqueuedAt": "2022-10-09T20:27:22.380218549Z",
      "content": null,
      "startedProcessingAt": "2022-10-09T20:27:22.393023806Z"
    }
  },
  {
    "uuid": "bb33e237-be17-453c-83a2-4fef67d03220",
    "update": {
      "status": "processed",
      "success": {
        "DocumentsAddition": {
          "nb_documents": 100
        }
      },
      "processedAt": "2022-10-09T20:28:01.93111053Z",
      "updateId": 2,
      "meta": {
        "type": "DocumentsAddition",
        "method": "ReplaceDocuments",
        "format": "Json",
        "primary_key": null
      },
      "enqueuedAt": "2022-10-09T20:27:59.817923645Z",
      "content": null,
      "startedProcessingAt": "2022-10-09T20:27:59.829038211Z"
    }
  },
  {
    "uuid": "f20c9936-a26e-4960-8a1f-3bdb390608f2",
    "update": {
      "status": "failed",
      "updateId": 0,
      "meta": {
        "type": "DocumentsAddition",
        "method": "ReplaceDocuments",
        "format": "Json",
        "primary_key": null
      },
      "enqueuedAt": "2022-10-09T20:27:24.157663206Z",
      "content": null,
      "startedProcessingAt": "2022-10-09T20:27:24.162839906Z",
      "error": {
        "message": "missing primary key",
        "errorCode": "missing_primary_key",
        "errorType": "invalid_request_error",
        "errorLink": "https://docs.meilisearch.com/errors#missing_primary_key"
      },
      "failedAt": "2022-10-09T20:27:24.242683494Z"
    }
  },
  {
    "uuid": "f20c9936-a26e-4960-8a1f-3bdb390608f2",
    "update": {
      "status": "processed",
      "success": {
        "DocumentsAddition": {
          "nb_documents": 10
        }
      },
      "processedAt": "2022-10-09T20:27:24.312809641Z",
      "updateId": 1,
      "meta": {
        "type": "DocumentsAddition",
        "method": "ReplaceDocuments",
        "format": "Json",
        "primary_key": "index"
      },
      "enqueuedAt": "2022-10-09T20:27:24.283289037Z",
      "content": null,
      "startedProcessingAt": "2022-10-09T20:27:24.285985108Z"
    }
  }
]
