dump/src/reader/v2/snapshots/dump__reader__v2__test__read_dump_v2-4.snap
---
source: dump/src/reader/v2/mod.rs
expression: products.settings()
---
Ok(
    Settings {
        displayed_attributes: Some(
            None,
        ),
        searchable_attributes: Some(
            None,
        ),
        filterable_attributes: Some(
            Some(
                {},
            ),
        ),
        ranking_rules: Some(
            Some(
                [
                    "words",
                    "typo",
                    "proximity",
                    "attribute",
                    "exactness",
                ],
            ),
        ),
        stop_words: Some(
            Some(
                {},
            ),
        ),
        synonyms: Some(
            Some(
                {
                    "android": [
                        "phone",
                        "smartphone",
                    ],
                    "iphone": [
                        "phone",
                        "smartphone",
                    ],
                    "phone": [
                        "android",
                        "iphone",
                        "smartphone",
                    ],
                },
            ),
        ),
        distinct_attribute: Some(
            None,
        ),
        _kind: PhantomData<dump::reader::v2::settings::Checked>,
    },
)
